--- a/styles/main.css
+++ b/styles/main.css
@@ -96,6 +96,8 @@ padding-top:.5rem;
 
 .bottom-section-right {
 padding-top:1rem;
+padding-right:1rem;
+
 }
 .hello {
   padding: 2rem 0rem 0rem 1rem;
