--- a/styles/main.css
+++ b/styles/main.css
@@ -161,8 +161,8 @@ h3  {
 }
 /* project item styles --------------------  */
 .item {
-  max-width: 50px;
-  max-height: 50px;
+  max-width: 40px;
+  max-height: 40px;
 }
 
 .item:hover {
@@ -295,7 +295,24 @@ display: none;
     a:after {
     background-color: white;
     }
+    h3 {
+            padding-top:10px;
+      color:black;
+
+    }
     /* .item {
     display: none;
     } */
+}
+
+@media only screen and (max-width: 1000px) {
+
+    .item {
+    display: none;
+    }
+        h3 {
+            padding-top:10px;
+      color:black;
+
+    }
 }
