--- a/styles/main.css
+++ b/styles/main.css
@@ -300,9 +300,10 @@ display: none;
       color:black;
 
     }
-    /* .item {
-    display: none;
-    } */
+    .item {
+  max-width: 40px;
+  max-height: 40px;
+    }
 }
 
 @media only screen and (max-width: 1000px) {
