--- a/styles/main.css
+++ b/styles/main.css
@@ -306,7 +306,7 @@ display: none;
     }
 }
 
-@media only screen and (max-width: 1000px) {
+/* @media only screen and (max-width: 1000px) {
 
     .item {
     display: none;
@@ -316,7 +316,7 @@ display: none;
       color:black;
 
     }
-}
+} */
 
 
 
